Ensure that WordPress.com follow widget doesn't get cut off after following.

--- a/sass/layout/_content.scss
+++ b/sass/layout/_content.scss
@@ -74,7 +74,7 @@
   }
 
   iframe {
-    max-width: 155px;
+    max-width: 175px;
   }
 
   .site-info {
