--- a/style.css
+++ b/style.css
@@ -1032,7 +1032,7 @@ a:hover, a:active {
   font-size: 0.6em;
 }
 .site-footer iframe {
-  max-width: 155px;
+  max-width: 175px;
 }
 .site-footer .site-info {
   margin-top: 2px;
